openshift/service__flutter-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: flutter-web-app
  namespace: flutter-web-app
spec:
  selector:
    name: flutter-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
